<resources>
    <string name="app_name">GumptionLabs</string>
    <string name="title_activity_nav_">nav_Activity</string>
    <string name="title_my_courses">My Courses</string>
    <string name="title_store">Store</string>
    <string name="title_purchase_history">Purchase History</string>
    <string name="title_logout">Logout</string>
    <string name="title_free_courses">Free Courses</string>
    <string name="player_title">Vimeo Player</string>

    <!--<string name="default_web_client_id" translatable="false">367411411207-a1he19lku1ljtrpgtehmkr865rc8e4c8.apps.googleusercontent.com</string>-->
</resources>
