<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_my_courses"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_my_courses" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_store"
        android:title="@string/title_store" />

    <item
        android:id="@+id/navigation_free_courses"
        android:icon="@drawable/free_icon"
        android:title="@string/title_free_courses" />

    <item
        android:id="@+id/navigation_purchase_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_purchase_history" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:title="@string/title_logout" />


</menu>
